# fructose

./: Cargo.toml  README.md
src/: cast.rs  group.rs  groups.rs  lib.rs  macros.rs  module.rs  operators.rs  properties.rs  ring.rs  vector.rs
src/algebra/: field.rs  group.rs  lattice.rs  mod.rs  module.rs  operators.rs  properties.rs  ring.rs  vector.rs
src/algebra/helpers/: bound.rs  exp.rs  float.rs  identity.rs  list.rs  mod.rs  pow.rs  sign.rs  trig.rs
src/algebra/linear/: mod.rs  transform.rs  vector.rs
src/algebra/properties/: archimedean.rs  bezout.rs  euclidean.rs  factorization.rs  gcd.rs  general.rs  mod.rs  primality.rs
src/algorithms/: euclidean.rs  factorization.rs  mod.rs  statistics.rs  stirling.rs
src/operators/: bit.rs  exp.rs  mod.rs  mul_add.rs  normal.rs  pow.rs  trig.rs
src/properties/: archimedean.rs  bezout.rs  euclidean.rs  general.rs  mod.rs  orders.rs  primality.rs
src/properties/helpers/: bound.rs  identity.rs  list.rs  mod.rs  sign.rs
src/specific/: bits.rs  complex.rs  int.rs  mod.rs  real.rs
