[package]
name = "fructose"
version = "0.3.3"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
publish = true
license-file = "LICENSE"
categories = ["mathematics", "science"]
keywords = ["math", "mathematics", "science", "physics"]
repository = "https://github.com/TriedWorks/fructose"
description = "Mathematical Traits for the Glucose Library and the Rust programming language."

[features]
default = ["specifics"]
Full = ["specifics", "const"]
specifics = []
const = []

[lib]
name = "fructose"
path = "src/lib.rs"

[dependencies]
