[package]
name = "fructose"
version = "0.3.9"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
publish = true
license-file = "LICENSE"
categories = ["mathematics", "science"]
keywords = ["math", "mathematics", "science", "physics"]
repository = "https://github.com/TriedWorks/fructose"
description = "Mathematical Traits for the Glucose Library and the Rust programming language."

[features]
default = ["full"]
full = ["specifics"]
specifics = []

[lib]
name = "fructose"
path = "src/lib.rs"

[dependencies]
